Reworked debug mode: Now we only enable checks for features that are not supported by the solver. If formula (or declaration) sharing is allowed we now still check that the formula (declaration) comes from the same solver backend. It is possible to re-enable all checks by manually setting the matching configuration flags to 'true'.